--- a/style.css
+++ b/style.css
@@ -6,15 +6,87 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Work Sans', sans-serif;
 }
 
+.gradient-heading{
+    font-size: 50px;
+    font-weight: 700;
+    background-image: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 25px;
+}
+
+/* navbar section styles */
 header{
     border: none;
 }
+
+.nav-container{
+    display: flex;
+    align-items: center;
+    max-width: 1440px;
+    margin: 45px auto;
+}
+
+
+/* logo section styles */
+.logo-img-container{
+width: 50%;
+display: flex;
+}
+
+.logo-img-container img{
+    width: 50px;
+    object-fit: cover;
+    margin-right: 20px;
+}
+
+.logo-img-container h1{
+    font-size: 45px;
+    font-weight: 700;
+}
+
+
+
+/* nav menu section styles */
+nav ul{
+    list-style: none;
+    color: black;
+    display: flex;
+}
+
+nav li a{
+    text-decoration: none;
+    color: #3C354F;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.menu-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 50%;
+}
+
+.btn-follow-us-on{
+    background-color: rgba(11, 2, 35, 0.10);
+    padding: 18px 24px;
+    border-radius: 8px;
+    font-weight: 500;
+    color: #3C354F;
+    text-align: center;
+}
+
+
+/* banner section styles */
 .banner-container {
     max-width: 1440px;
     /* min-height: 100px; */
-    background-color: rgb(246, 235, 252);
+    background-color: rgba(255, 66, 165, 0.03);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,6 +104,25 @@ header{
     font-size: 48px;
     font-weight: 600;
     text-transform: uppercase;
+}
+
+.banner-content h1{
+    font-size: 90px;
+    font-weight: 800;
+    text-transform: uppercase;
+    background-image: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 25px;
+
+}
+
+.banner-content p {
+    color: #534C64;
+    line-height: 20px;
+    font-weight: 500;
+    font-size: 20px;
 }
 
 .banner-button button {
@@ -56,8 +147,19 @@ header{
 /* gamer section styles */
 
 .gamer-container{
+    background-color: rgba(255, 66, 165, 0.03);
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 55px 40px;
+}
+
+
+
+.gamer-content p{
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    color: #534C64;
+    margin: 25px 0px 30px;
 }
