--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     font-family: 'Work Sans', sans-serif;
 }
 
-.gradient-heading{
+.gradient-heading {
     font-size: 50px;
     font-weight: 700;
     background-image: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
@@ -20,11 +20,11 @@
 }
 
 /* navbar section styles */
-header{
+header {
     border: none;
 }
 
-.nav-container{
+.nav-container {
     display: flex;
     align-items: center;
     max-width: 1440px;
@@ -33,52 +33,58 @@ header{
 
 
 /* logo section styles */
-.logo-img-container{
-width: 50%;
-display: flex;
+.logo-img-container {
+    width: 50%;
+    display: flex;
 }
 
-.logo-img-container img{
-    width: 50px;
-    object-fit: cover;
+.logo-img-container img {
+    width: 86px;
     margin-right: 20px;
+
 }
 
-.logo-img-container h1{
+.logo-img-container h1 {
     font-size: 45px;
     font-weight: 700;
 }
 
 
-
 /* nav menu section styles */
-nav ul{
-    list-style: none;
-    color: black;
-    display: flex;
-}
 
-nav li a{
-    text-decoration: none;
-    color: #3C354F;
-    font-size: 18px;
-    font-weight: 500;
-}
-
-.menu-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.menu-container {
     width: 50%;
 }
 
-.btn-follow-us-on{
+.menu-container ul {
+    list-style: none;
+    color: black;
+    display: flex;
+    gap: 40px;
+    justify-content: right;
+}
+
+.menu-container li a {
+    text-decoration: none;
+    color: #3C354F;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+
+.btn-follow-us-on {
     background-color: rgba(11, 2, 35, 0.10);
     padding: 18px 24px;
     border-radius: 8px;
     font-weight: 500;
     color: #3C354F;
     text-align: center;
+}
+
+
+.menu-container i {
+    margin-left: 15px;
+
 }
 
 
@@ -94,7 +100,6 @@ nav li a{
     padding: 20px 40px 0px 40px;
 }
 
-
 .banner-content {
     width: 50%;
 }
@@ -106,7 +111,7 @@ nav li a{
     text-transform: uppercase;
 }
 
-.banner-content h1{
+.banner-content h1 {
     font-size: 90px;
     font-weight: 800;
     text-transform: uppercase;
@@ -140,13 +145,17 @@ nav li a{
 
 .banner-img img {
     width: 100%;
-   display: block;
+    display: block;
 }
+
+
 
 
 /* gamer section styles */
 
-.gamer-container{
+.gamer-container {
+    max-width: 1440px;
+    margin: 0 auto;
     background-color: rgba(255, 66, 165, 0.03);
     display: flex;
     justify-content: space-around;
@@ -154,12 +163,114 @@ nav li a{
     padding: 55px 40px;
 }
 
-
-
-.gamer-content p{
+.gamer-content p {
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
     color: #534C64;
     margin: 25px 0px 30px;
+}
+
+
+
+/* funny video section styles */
+.funny-videos-section {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.funny-videos-section h2,
+p {
+    text-align: center;
+}
+
+.funny-videos-section h2 {
+    color: #0B0223;
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.funny-videos-section p {
+    font-size: 18px;
+    font-weight: 400;
+    margin: 25px 0px 50px;
+    color: #534C64;
+}
+
+.videos-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.videos-content {
+    border-radius: 15px;
+    width: 310px;
+    background-color: #fff;
+}
+
+.videos-content img {
+    width: 100%;
+}
+
+.videos-content p {
+    text-align: left;
+}
+
+
+
+
+/* online games section styles */
+.online-games-container {
+    max-width: 1440px;
+    margin: 120px auto 0;
+    display: flex;
+}
+
+.online-games-content {
+    width: 50%;
+    margin: auto;
+    background-color: #8758F1;
+}
+
+.online-games-img-container {
+    width: 50%;
+}
+
+.online-games-content p {
+    width: 350px;
+    margin-top: 25px;
+}
+
+.online-games-img-container .player-image-big {
+    margin-left: 50px;
+}
+
+.online-games-img-container .player-image-small {
+    width: 300px;
+    position: relative;
+    bottom: 285px;
+    right: 80px;
+}
+
+
+
+
+
+/* footer section styles */
+footer {
+    background-color: #0B0223;
+    text-align: center;
+}
+
+footer ul {
+    list-style: none;
+    color: black;
+    display: flex;
+}
+
+footer li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
 }
