--- a/style.css
+++ b/style.css
@@ -215,7 +215,12 @@ header {
 }
 
 
+/* git config --global user.name "Your Name"
+    git config --global user.email you@example.com
 
+After doing this, you may fix the identity used for this commit with:
+
+    git commit --amend --reset-author */
 
 /* online games section styles */
 .online-games-container {
