--- a/style.css
+++ b/style.css
@@ -231,9 +231,8 @@ header {
 .videos-content {
     border-radius: 15px;
     max-width: 340px;
+    overflow: hidden;
     position: relative;
-
-    /* overflow: hidden; */
 }
 
 .videos-content p {
@@ -241,52 +240,42 @@ header {
 }
 
 .videos-content img {
-    display: block;
     width: 100%;
     height: auto;
 }
 
-/* ggggggg gggggggggggggggggggbbbbbbbb*/
+
+
+.videos-content:hover .image-cover {
+    top: 0;
+
+}
 
 .image-cover {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    top: -100%;
     width: 100%;
     height: 100%;
-    opacity: 0;
-    transition: 0.3s ease;
-    background-color: red;
+    color: #fff;
+    transition: all 0.2s;
+    background-color: rgba(0, 0, 0, 0.7);
+    border: 5px solid #6e33f7;
 
 }
 
-.videos-content :hover .image-cover {
-    opacity: 1;
-
-}
-
-.image-cover i {
+.image-cover i{
     font-size: 50px;
     color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
     text-align: center;
-    transform: translate(-50%, -50%);
 
 }
 
 .image-cover p {
     margin-left: 30%;
-    color: rgb(144, 8, 8);
+    color: #F948B2;
     font-size: 20px;
     font-weight: 600;
 }
-
-
-
 
 
 
